7-28-2025
- add format script for nix files under /scripts/nixfmt.sh
- format all nix files in the project to follow the nixpkgs rfc style standard
- fix an import bug for take-screenshot-xorg where the import was missing the .nix extension
- fix nvidia module to use hardware.nvidia.open = true; by default.


7-27-2025
- seperated each script for home-manager into seperate files
- renamed wayland-wallpaper-switcher.sh to rofi-wallpaper-switcher.sh
- changed description of sww-wallpaper-manager.service from "Manage wallpapers automatically using swww" to "automatic wallpaper manager for swww"
- set waybar's logout menu option command to "uwsm stop" instead of "hyprctl dispatch exit || swaymsg exit"
- set sway win+shift+e keybind to "uwsm stop" instead of "swaymsg exit"
- added evince and simple-scan to excluded packages for gnome
- add openvpn module
- add programs.remmina to nixos and home-manager
- add btop-cuda and btop-rocm to programs.btop.package for nvidia and amd gpu modules.


7-26-2025
- add modules.system-stylizer to nixos for automatic theming of sddm and grub based on the current desktop theme in home-manager
- add space-jelly to swww wallpaper slideshow for cosmos theme
- update flake to linux 6.15.8
- remove ghostty flake input
- set inputs.stylix.nur to follow inputs.nur, removing another copy of nixpkgs.


7-25-2025
- add nix lsp neovim to installer iso
- move swayidle options from services.swayidle.settings to services.swayidle
- add suspend option for hypridle
- set suspend timeout to 30 minutes by default for laptops
- reorganized personal profile set


7-12-2025
- update vim, lualine, lsp reconfiguration, and small keybind adjustments
- replace dunst with swaync for wayland sessions
- utilize mkMerge on more jankily written modules
- add default swaync profile with an option for smaller screens.
- integrate swaync into waybar


6-30-2025
- disable nm-applet for waybar due to severe crashes caused by it
- fixed swww.sh not finding systemctl