@@ -4,4 +4,5 @@
     profiles.desktopTheme = "hollow-knight";
     editor = "codium";
   };
+  stylix.targets.qt.platform = "gnome";
 }
